<?xml version="1.0"?>
<package format="2">
  <name>camera_driver</name>
  <version>0.0.0</version>
  <description>The camera_driver package</description>

  <maintainer email="ligazetom@todo.todo">ligazetom</maintainer>
  <maintainer email="matusino221@gmail.com">Matus Tomsik</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
	<depend>roslib</depend>
  <depend>sgtdv_msgs</depend>
  <depend>std_msgs</depend>

</package>
